@startuml
class ConcreteFlyweight implements Flyweight
class UnsharedConcreteFlyweight implements Flyweight
Flyweight : operation(extrinsicState)
ConcreteFlyweight : operation(extrinsicState)
ConcreteFlyweight : intrinsicState
UnsharedConcreteFlyweight : operation(extrinsicState)
UnsharedConcreteFlyweight : allState

FlyweightFactory o-- Flyweight
FlyweightFactory : getFlyweight(key)

Client --> FlyweightFactory
Client --> ConcreteFlyweight
Client --> UnsharedConcreteFlyweight

note right of FlyweightFactory::getFlyweight(key)
if (flyweight[key] exists) {
    return existing flyweight;
} else {
    create new flyweight;
    add it to pool of flyweights;
    return the new flyweight;
}
end note
@enduml